# cmake-ini-file-parser

./: CMakeLists.txt  README.md
cmake/: INIFileParser.cmake
templates/: INIFileParser-config.cmake.in
